Format price and number display on order book. Switch font-family to Consolas for order list so numbers are correctly aligned.

--- a/src/OrderBook.css
+++ b/src/OrderBook.css
@@ -23,6 +23,7 @@
 
 .order-list {
   padding: 5px;
+  font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
 }
 
 .order-list-container {
